<resources>
    <string name="app_name">EduLearn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="clas">Class</string>
    <string name="event">Event</string>
    <string name="edu_learn">EduLearn</string>
    <string name="hello_cyndy">Hello, Cyndy!</string>
    <string name="find_the_class">Find the class or field you like here</string>
    <string name="your_class">Your class</string>
    <string name="mastering_ui_ux_design">Mastering UI/UX Design</string>
    <string name="application_history_in_the_world">Application History in the World</string>
    <string name="beginner">Beginner</string>
    <string name="_5_10">5/10</string>
    <string name="_50">50%</string>
    <string name="show_alert_dialog">Show Alert Dialog</string>
    <string name="event_fragment">Event Fragment</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="log_in">Log In</string>
    <string name="show_custom_dialog">Show Custom Dialog</string>
</resources>