<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/event_fragment"
        android:gravity="center"
        style="@style/Text.Roboto.Bold"
        android:textSize="@dimen/sp_26"/>

    <Button
        android:id="@+id/btnShowAlertDialog"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        style="@style/Text.Roboto.Bold"
        android:text="@string/show_alert_dialog" />


    <Button
        android:id="@+id/btnShowCustomDialog"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_120"
        android:layout_height="@dimen/dp_50"
        style="@style/Text.Roboto.Bold"
        android:text="@string/show_custom_dialog" />

</FrameLayout>